--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,4 @@ tabula-py>=2.3.0
 opencv-python>=4.5.5
 google-generativeai>=0.3.1  # Gemini API
 markdown>=3.4.0  # For rendering markdown reports
+plotly>=5.13.0
