--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,20 @@ opencv-python>=4.5.5
 google-generativeai>=0.3.1  # Gemini API
 markdown>=3.4.0  # For rendering markdown reports
 plotly>=5.13.0
+
+# Add missing dependencies
+tabula-py>=2.3.0
+pdf2image>=1.16.0
+pytesseract>=0.3.10
+opencv-python-headless>=4.5.5
+pdfplumber>=0.11.5
+fpdf>=1.7.2
+
+# System dependencies for OpenCV and Tesseract
+# Install with: apt-get install -y $(cat requirements.txt)
+libgl1
+libglib2.0-0
+tesseract-ocr
+tesseract-ocr-eng
+tesseract-ocr-heb  # Add Hebrew language support
+poppler-utils      # Required for pdf2image
